--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,3 +1,12 @@
+/* Remove persistent Firefox button focus border globally */
+button:focus {
+  outline: none !important;
+  box-shadow: none !important;
+  border: none !important;
+}
+button::-moz-focus-inner {
+  border: 0 !important;
+}
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
